--- a/public/styles.css
+++ b/public/styles.css
@@ -7,22 +7,24 @@ html {
 
 h1 {
   color: #fff;
-  padding: 10px;
+  padding: 5px;
 }
 
 .box {
   max-width: 20%;
-  margin: 50px auto;
-
+  margin: 5vh auto;
   border-radius: 5px;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
 }
 
 #box {
-  transition: all ease-out 0.3s;
   overflow: scroll;
-  height: 40vh;
+  transition: all ease-out 0.3s;
+  width: 50vw;
+  margin: auto;
+  height: 50vh;
   background-color: white;
+  opacity: 0.6;
 }
 
 #heading {
@@ -39,15 +41,22 @@ h1 {
 #Home:hover a,
 #Daily:hover a,
 #Work:hover a {
-  color: rgb(209, 205, 205);
+  color: rgb(109, 105, 105);
   transition: all ease-out 0.3s;
 }
 
-.item {
-  min-height: 70px;
+.item,
+#item {
+  min-height: 5vh;
   display: flex;
   align-items: center;
   border-bottom: 1px solid #5f5b5b;
+  opacity: 1;
+  color: #000000;
+}
+
+#form {
+  max-width: 100%;
 }
 
 .item:last-child {
@@ -72,21 +81,15 @@ form {
 }
 
 button {
-  min-height: 40px;
-  width: 40px;
-  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
   border-color: transparent;
-  background-color: #6b6964;
+  background-color: transparent;
   color: #fff;
   font-size: 30px;
-  padding-bottom: 6px;
-  border-width: 0;
   outline: none;
   margin-right: 5px;
-}
-
-button:hover {
-  background-color: #aaa9a6;
+  cursor: pointer;
 }
 
 input[type="text"] {
@@ -103,8 +106,6 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-
-  box-shadow: inset 0 -3px 0 0 #4e4263;
 }
 
 ::placeholder {
@@ -143,4 +144,9 @@ li a {
 
 a:visited {
   color: #ffffff;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
 }
